overflow fix

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -5,6 +5,7 @@
 
 body {
   background-color: #f5f5f5;
+  overflow-x: hidden;
 }
 
 .container {
